# github-contrib-awtrix

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  local-refresh.md
docs/reference/: awtrix-display.md  github-data.md
docs/specs/: awtrix-display.md  local-service.md
examples/: rotation.toml
examples/launchd/: com.example.github-contrib-awtrix.refresh.plist
src/github_contrib_awtrix/: __init__.py  awtrix.py  cli.py  colors.py  commit_search.py  config.py  defaults.py  github.py  grid.py  refresh.py  render.py  velocity.py
tests/: conftest.py  test_awtrix.py  test_cli.py  test_commit_search.py  test_config.py  test_grid.py  test_refresh.py  test_render.py  test_velocity.py
