[project]
name = "github-contrib-awtrix"
version = "0.1.0"
description = "Show a GitHub contribution graph on an AWTRIX/Ulanzi display."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.4.22",
    "pillow>=12.2.0",
]

[project.scripts]
github-contrib-awtrix = "github_contrib_awtrix.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.12",
    "ty>=0.0.1a19",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

